--- a/playease.html
+++ b/playease.html
@@ -320,7 +320,8 @@ _eventMapping = {
 			autoplay: false,
 			poster: 'images/poster.png',
 			render: {
-				name: 'def'
+				name: 'def',
+				swf: 'swf/playease.swf'
 			},
 			events: {
 				onFullpage: function(e) {
