--- a/chatease.html
+++ b/chatease.html
@@ -78,6 +78,7 @@
 			
 			<h2>News</h2>
 			<ul class='u5 square'>
+				<li>Added support to MSIE 8 & 9 for <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
 				<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 				<li><a href='chatease.html'>Chatease.js</a>, a client-side script for websocket chat, beta released.<i> - Aug. 1, 2016</i></li>
 			</ul>
@@ -89,7 +90,7 @@
 				<li>Opera</li>
 				<li>Safari</li>
 				<li>IE10-11, Edge</li>
-				<li>IE7-9 (using sockjs, not supported by chatease-server for now)</li>
+				<li>IE7-9 (Flash is needed.)</li>
 			</ul>
 			
 			<h2>Example</h2>
@@ -183,7 +184,7 @@ _eventMapping = {
 					<a>resize(width, height)</a>
 					<p>
 						width: Width in px.</br>
-						height: Hieght in px.
+						height: Height in px.
 					</p>
 				</li>
 			</ul>
