--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 			<div id='news'>
 				<h2>News</h2>
 				<ul class='u5 square'>
+					<li>Added support to MSIE 8 & 9 for <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
 					<li>Planning to build an HTML5 live streaming server: <a href='http://rtmpmate.com' target='_blank'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
 					<li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
 					<li>Added UI controls for <a href='playease.html'>playease.js</a> at version 1.0.08.<i> - Apr. 17, 2017</i></li>
