--- a/chatease-server.html
+++ b/chatease-server.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-	<title>Chatease-server - StudEase.cn</title>
+	<title>chatease-server - StudEase.cn</title>
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
