--- a/playease.html
+++ b/playease.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-	<title>Playease.js - StudEase.cn</title>
+	<title>playease.js - StudEase.cn</title>
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 			
-			<p style='margin-top: 8rem;'>
+			<p>
 				The example below will find the element with an id of "player" and render a player into it.
 			</p>
 
