--- a/slicease.html
+++ b/slicease.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-	<title>Slicease.js - StudEase.cn</title>
+	<title>slicease.js - StudEase.cn</title>
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
