--- a/chatease.html
+++ b/chatease.html
@@ -95,7 +95,7 @@
 			</ul>
 			
 			<h2>Example</h2>
-			<div id='chatwrap' style='margin: 4rem auto; width: 100%; height: 400px; max-width: 640px;'>
+			<div id='chatwrap' style='margin: 4rem auto; width: 100%; height: 100%; max-width: 640px; max-height: 400px;'>
 				<div id='chat'></div>
 			</div>
 			
@@ -252,7 +252,7 @@ _eventMapping = {
 		};
 		
 		var chat = chatease('chat').setup({
-			url: 'ws://192.168.1.228/ch1?token=123456',
+			url: 'ws://222.180.239.126:6688/ch1?token=123456',
 			width: '100%',
 			height: '100%',
 			maxretries: 0
