--- a/chatease.html
+++ b/chatease.html
@@ -95,7 +95,7 @@
 			</ul>
 			
 			<h2>Example</h2>
-			<div id='chatwrap' style='margin: 4rem auto; width: 100%; height: 100%; max-width: 640px; max-height: 400px;'>
+			<div id='chatwrap' style='margin: 4rem auto; width: 100%; height: 400px; max-width: 640px;'>
 				<div id='chat'></div>
 			</div>
 			
@@ -109,8 +109,8 @@
 ...
 var chat = chatease('chatwrap').setup({
     url: 'ws://localhost/ch1?token=123456',
-    width: 100%,
-    height: 100%
+    width: 640,
+    height: 400
 });
 </pre>
 <br/>
@@ -123,8 +123,8 @@ var chat = chatease('chatwrap').setup({
 <pre class='prettyprint'>
 _defaults = {
     url: 'ws://' + window.location.host + '/ch1?token=123456',
-    width: 100%,
-    height: 100%,
+    width: 640,
+    height: 400,
     keywords: '',
     maxlength: 30,    // -1: no limit
     maxrecords: 50,
@@ -253,8 +253,8 @@ _eventMapping = {
 		
 		var chat = chatease('chat').setup({
 			url: 'ws://222.180.239.126:6688/ch1?token=123456',
-			width: '100%',
-			height: '100%',
+			width: 640,
+			height: 400,
 			maxretries: 0
 		});
 	</script>
