--- a/solutions.html
+++ b/solutions.html
@@ -21,7 +21,7 @@
 	
 	<script type='text/javascript' src='js/prettify/min/prettify.min.js'></script>
 	<script type='text/javascript' src='js/playease.min.js'></script>
-	<script type='text/javascript' src='js/chatease.js'></script>
+	<script type='text/javascript' src='js/chatease.min.js'></script>
 </head>
 <body ontouchstart=''>
 	<header>
