--- a/chatease.html
+++ b/chatease.html
@@ -252,7 +252,10 @@ _eventMapping = {
 		};
 		
 		var chat = chatease('chat').setup({
-			url: 'ws://222.180.239.126:6688/ch1?token=123456',
+			url: 'ws://222.180.239.126:6688/ch1?name=游客' + (function() {
+				var id = Math.ceil(Math.random() * 100);
+				return chatease.utils.pad(id, 3);
+			})(),
 			width: 640,
 			height: 400,
 			maxretries: 0
