--- a/playease.html
+++ b/playease.html
@@ -87,7 +87,9 @@
 			<div id='fp' style='margin: 4rem auto; width: 100%; max-width: 640px; top: 0; left: 0;'>
 				<div id='player'></div>
 				<div class='input-container'>
-					<input id='url-input' value='/vod/sample.mp4' />
+					<span>
+						<input id='url-input' value='/vod/sample.mp4' />
+					</span>
 					<a class='btn red' onclick='playTheURL();'>Play</a>
 				</div>
 			</div>
