--- a/solutions.html
+++ b/solutions.html
@@ -93,7 +93,7 @@
 		
 		<div class='features'>
 		<section>
-			<div class='container'>
+			<span>
 				<a href='#'>
 					<div class='img-container'>
 						<img src='images/content/custom-branding.png' />
@@ -103,6 +103,8 @@
 						<span>Build the experience of the multi-platform player you want.</span>
 					</div>
 				</a>
+			</span>
+			<span>
 				<a href='#'>
 					<div class='img-container'>
 						<img src='images/content/adaptive-streaming.png' />
@@ -112,6 +114,8 @@
 						<span>Make sure your viewers always get the content smoothly.</span>
 					</div>
 				</a>
+			</span>
+			<span>
 				<a href='#'>
 					<div class='img-container'>
 						<img src='images/content/ad-insertion.png' />
@@ -121,6 +125,8 @@
 						<span>Easy video ad delivery and implementation of other plugins.</span>
 					</div>
 				</a>
+			</span>
+			<span>
 				<a href='#'>
 					<div class='img-container'>
 						<img src='images/content/realtime-message.png' />
@@ -130,7 +136,7 @@
 						<span>Cross-platform real-time message delivery via websocket.</span>
 					</div>
 				</a>
-			</div>
+			</span>
 		</section>
 		</div>
 	</div>
