--- a/chatease.html
+++ b/chatease.html
@@ -95,7 +95,7 @@
 			</ul>
 			
 			<h2>Example</h2>
-			<div id='chatwrap' style='margin: 4rem auto; width: 100%; height: 400px; max-width: 640px;'>
+			<div id='chatwrap' style='margin: 40px auto; width: 100%; height: 400px; max-width: 640px;'>
 				<div id='chat'></div>
 			</div>
 			
