--- a/playease.html
+++ b/playease.html
@@ -84,7 +84,7 @@
 			</ul>
 			
 			<h2>Example</h2>
-			<div id='fp' style='margin: 4rem auto; width: 100%; max-width: 640px; top: 0; left: 0;'>
+			<div id='fp' style='margin: 40px auto; width: 100%; max-width: 640px; top: 0; left: 0;'>
 				<div id='player'></div>
 				<div class='input-container'>
 					<span>
@@ -249,6 +249,7 @@ _eventMapping = {
 					<a>resize(width, height)</a>
 				</li>
 			</ul>
+			<br/>
 			
 			<h2>Software License</h2>
 			<p>
@@ -326,7 +327,7 @@ _eventMapping = {
 			},
 			events: {
 				onFullpage: function(e) {
-					fp.style.margin = e.exit ? '4rem auto' : '0';
+					fp.style.margin = e.exit ? '40px auto' : '0';
 					fp.style.height = e.exit ? '' : '100%';
 					fp.style.position = e.exit ? '' : 'fixed';
 					fp.style.maxWidth = e.exit ? '640px' : '100%';
