--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
 	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes"/>
 	
 	<link rel="shortcut icon" href="images/favicon.ico">
+	
+	<!--[if lt IE 9]>
+	<script type='text/javascript'>
+		(function() {
+			if (!/*@cc_on!@*/0) {
+				return;
+			}
+			
+			var e = "abbr, article, aside, audio, canvas, datalist, details, dialog, eventsource, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, time, video".split(', ');
+			var i = e.length;
+			while (i--) {
+				document.createElement(e[i]);
+			}
+		})()
+	</script>
+	
+	<style type='text/css' media='screen'>
+		article, aside, dialog, footer, header, section, footer, nav, figure, menu {
+			display: block;
+		}
+	</style>
+	<![endif]-->
+	
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 	
 	<script type='text/javascript' src='js/gl-matrix-min.js'></script>
