--- a/solutions.html
+++ b/solutions.html
@@ -246,10 +246,13 @@
 			})(),
 			width: 320,
 			height: 400,
-			maxretries: 0,
+			maxretries: -1,
 			events: {
 				onMessage: function(e) {
 					player.shoot(e.data);
+				},
+				onUsers: function(e) {
+					console.log('Online: ' + e.channel.total + '.');
 				}
 			}
 		});
