--- a/playease.html
+++ b/playease.html
@@ -343,6 +343,8 @@ _eventMapping = {
 			}],*/
 			type: 'vod',
 			cors: 'no-cors',
+			bufferTime: 1,
+			maxretries: 0,
 			controls: true,
 			autoplay: false,
 			poster: 'images/poster.png',
