--- a/chatease.html
+++ b/chatease.html
@@ -275,7 +275,7 @@ _eventMapping = {
 		};
 		
 		var chat = chatease('chat').setup({
-			url: 'ws://118.190.79.29/tony?name=游客' + (function() {
+			url: 'ws://118.190.79.29/001?name=游客' + (function() {
 				var id = Math.ceil(Math.random() * 1000);
 				return chatease.utils.pad(id, 3);
 			})(),
