--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 				<li><a href='index.html#news'>NEWS</a></li>
 				<li><a href='solutions.html'>SOLUTIONS</a></li>
 				<li>
-					<a href='projects.html'>PROJECTS</a>
+					<a href='#'>PROJECTS</a>
 					<ul>
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
@@ -85,9 +85,9 @@
 	</header>
 	
 	<div class='wrap'>
-		<div>
+		<div class='center'>
 		<section>
-			
+			<a>"We love working on programmer. It feels like a puzzle and that we're both creating and solving at the same time."</a>
 		</section>
 		</div>
 	</div>
