--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<li><a href='index.html#news'>NEWS</a></li>
 				<li><a href='solutions.html'>SOLUTIONS</a></li>
 				<li>
-					<a href='projects.html'>PROJECTS</a>
+					<a href='#'>PROJECTS</a>
 					<ul>
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
@@ -97,7 +97,7 @@
 		<div class='news'>
 		<section>
 			<div id='news'>
-				<h2>News</h2>
+				<h3>News</h3>
 				<ul class='u5 square'>
 					<li>Added support to MSIE 8 & 9 for <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
 					<li>Planning to build an HTML5 live streaming server: <a href='http://rtmpmate.com' target='_blank'>rtmpmate</a>.<i> - Apr. 22, 2017</i></li>
