--- a/slicease.html
+++ b/slicease.html
@@ -71,7 +71,7 @@
 				<li><a href='index.html#news'>NEWS</a></li>
 				<li><a href='solutions.html'>SOLUTIONS</a></li>
 				<li class='current'>
-					<a href='projects.html'>PROJECTS</a>
+					<a href='#'>PROJECTS</a>
 					<ul>
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
@@ -99,7 +99,7 @@
 				This is a 3D image rotator using WebGL.
 			</p>
 			
-			<h2>News</h2>
+			<h3>News</h3>
 			<ul class='u5 square'>
 				<li><a href='slicease.html'>Slicease.js</a> 3.0 released: Using WebGL.<i> - Feb. 20, 2017</i></li>
 				<li><a href='slicease.html'>Slicease.js</a> 2.0 released: New features, e.g. MVC, event-driven, etc.<i> - Dec. 30, 2015</i></li>
@@ -112,7 +112,7 @@
 				<li><a href='slicease.html'>Slicease.js</a>, which is a 3D image rotator, 1.0 released.<i> - Sep. 28, 2014</i></li>
 			</ul>
 			
-			<h2>Example</h2>
+			<h3>Example</h3>
 			<p>
 				The example below will find the element with an id of "slicer" and render a slicer into it.
 			</p>
@@ -153,12 +153,12 @@ _defaults = {
 </pre>
 <br/>
 
-			<h2>Modify</h2>
+			<h3>Modify</h3>
 			<p>
 				Please check the test/index.html for scripts sequence.
 			</p>
 			
-			<h2>Software License</h2>
+			<h3>Software License</h3>
 			<p>
 				MIT.
 			</p>
