--- a/chatease.html
+++ b/chatease.html
@@ -72,7 +72,7 @@
 				<li><a href='index.html#news'>NEWS</a></li>
 				<li><a href='solutions.html'>SOLUTIONS</a></li>
 				<li class='current'>
-					<a href='projects.html'>PROJECTS</a>
+					<a href='#'>PROJECTS</a>
 					<ul>
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
@@ -100,14 +100,14 @@
 				This is a client-side script for websocket chat.
 			</p>
 			
-			<h2>News</h2>
+			<h3>News</h3>
 			<ul class='u5 square'>
 				<li>Added support to MSIE 8 & 9 for <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
 				<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 				<li><a href='chatease.html'>Chatease.js</a>, a client-side script for websocket chat, beta released.<i> - Aug. 1, 2016</i></li>
 			</ul>
 			
-			<h2>Tested</h2>
+			<h3>Tested</h3>
 			<ul class='u5 square'>
 				<li>Chrome</li>
 				<li>Firefox</li>
@@ -117,12 +117,16 @@
 				<li>IE7-9 (Flash is needed.)</li>
 			</ul>
 			
-			<h2>Example</h2>
-			<div id='chatwrap' style='margin: 40px auto; width: 100%; height: 400px; max-width: 640px;'>
+			<h3>Example</h3>
+			<div class='ol-status' style='width: 100%; max-width: 640px;'>
+				<label>Online: </label>
+				<span id='ol-users'>0</span>
+			</div>
+			<div id='chatwrap' style='width: 100%; max-width: 640px; height: 400px;'>
 				<div id='chat'></div>
 			</div>
 			
-			<p>
+			<p style='margin-top: 40px;'>
 				The example below will find the element with an id of "chatwrap" and render a dialog into it.
 			</p>
 
@@ -163,7 +167,7 @@ _defaults = {
 </pre>
 <br/>
 
-			<h2>Add Callbacks</h2>
+			<h3>Add Callbacks</h3>
 
 <?prettify lang=js linenums=true?>
 <pre class='prettyprint'>
@@ -200,7 +204,7 @@ _eventMapping = {
 </pre>
 <br/>
 
-			<h2>Interfaces</h2>
+			<h3>Interfaces</h3>
 			<ul class='u5 square'>
 				<li>
 					<a>send(data)</a>
@@ -217,12 +221,12 @@ _eventMapping = {
 				</li>
 			</ul>
 			
-			<h2>Websocket Server</h2>
+			<h3>Websocket Server</h3>
 			<p>
 				<a href='chatease-server.html' target='_blank'>chatease-server</a>
 			</p>
 			
-			<h2>Software License</h2>
+			<h3>Software License</h3>
 			<p>
 				MIT.
 			</p>
@@ -274,7 +278,11 @@ _eventMapping = {
 			prettyPrint();
 		};
 		
-		var chat = chatease('chat').setup({
+		var chat, users;
+		
+		users = document.getElementById('ol-users');
+		
+		chat = chatease('chat').setup({
 			url: 'ws://118.190.79.29/001?name=游客' + (function() {
 				var id = Math.ceil(Math.random() * 1000);
 				return chatease.utils.pad(id, 3);
@@ -283,11 +291,14 @@ _eventMapping = {
 			height: 400,
 			maxretries: -1,
 			events: {
+				onIdent: function(e) {
+					users.innerText = e.channel.total || 0;
+				},
 				onMessage: function(e) {
 					//player.shoot(e.data);
 				},
 				onUsers: function(e) {
-					console.log('Online: ' + e.channel.total + '.');
+					users.innerText = e.channel.total;
 				}
 			}
 		});
