--- a/solutions.html
+++ b/solutions.html
@@ -267,7 +267,7 @@
 			maxretries: -1,
 			events: {
 				onIdent: function(e) {
-					users.innerText = e.channel.total || 0;
+					users.innerText = e.channel.total;
 				},
 				onMessage: function(e) {
 					player.shoot(e.data);
