--- a/solutions.html
+++ b/solutions.html
@@ -217,10 +217,10 @@
 			aspectratio: '16:9',
 			//file: '/vod/sample.mp4',
 			sources: [{
-				file: 'rtmp://cclive.qcus.cn/teach/stream01',
+				file: 'rtmp://cclive.qcus.cn/teach/sample',
 				type: 'flash'
 			}, {
-				file: 'http://cchls.qcus.cn/teach/stream01/index.m3u8',
+				file: 'http://cchls.qcus.cn/teach/sample/index.m3u8',
 				type: 'def'
 			}],
 			type: 'live',
@@ -250,14 +250,14 @@
 			}
 		});
 		
-		var url = 'ws://118.190.79.29/ch1?name=游客' + (function() {
+		var url = 'ws://118.190.79.29/001?name=游客' + (function() {
 			var id = Math.ceil(Math.random() * 1000);
 			return chatease.utils.pad(id, 3);
 		})();
 		
 		var params = window.location.search;
 		if (params) {
-			url = 'ws://118.190.79.29/ch1' + params;
+			url = 'ws://118.190.79.29/001' + params;
 		}
 		
 		chat = chatease('chat').setup({
