--- a/faq.html
+++ b/faq.html
@@ -125,9 +125,12 @@
 				Known Issues and Planned Features: 
 			</p>
 			<ul class='u5 square'>
-				<li>Online user amount doesn't specified in "onIdent" callback.</li>
+				<li>Online user amount doesn't specified in "onIdent" callback.<i> - Fixed on Jun. 5 2017</i></li>
 				<li>Bad upgrade request won't get the explanation before the connection is closed.</li>
 				<li>Read and parse configuration file.</li>
+				<li>Right control.</li>
+				<li>Log file.</li>
+				<li>Message queue.</li>
 				<li>Smooth restart.</li>
 				<li>Backstage management system.</li>
 			</ul>
