--- a/faq.html
+++ b/faq.html
@@ -125,7 +125,10 @@
 				Known Issues and Planned Features: 
 			</p>
 			<ul class='u5 square'>
-				<li>Online user amount doesn't specified in "onIdent" callback.<i> - Fixed on Jun. 5 2017</i></li>
+				<li>
+					Online user amount doesn't specified in "onIdent" callback.
+					<p><a>A: </a>Fixed in version 1.0.23.<i> - Jun. 5 2017</i></p>
+				</li>
 				<li>Bad upgrade request won't get the explanation before the connection is closed.</li>
 				<li>Read and parse configuration file.</li>
 				<li>Right control.</li>
