--- a/faq.html
+++ b/faq.html
@@ -129,10 +129,12 @@
 					Online user amount doesn't specified in "onIdent" callback.
 					<p><a>A: </a>Fixed in version 1.0.23.<i> - Jun. 5 2017</i></p>
 				</li>
-				<li>Bad upgrade request won't get the explanation before the connection is closed.</li>
-				<li>Read and parse configuration file.</li>
+				<li>
+					Write log file, read and parse configuration file.
+					<p><a>A: </a>Done in version 1.0.26.<i> - Jun. 13 2017</i></p>
+				</li>
 				<li>Right control.</li>
-				<li>Log file.</li>
+				<li>Bad upgrade request won't get the explanation before the connection is closed.</li>
 				<li>Message queue.</li>
 				<li>Smooth restart.</li>
 				<li>Backstage management system.</li>
