--- a/playease.html
+++ b/playease.html
@@ -40,7 +40,7 @@
 	<![endif]-->
 	
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
-	<link type='text/css' rel='stylesheet' href='css/prettify.min.css' />
+	<link type='text/css' rel='stylesheet' href='css/prettify.css' />
 	
 	<script type='text/javascript' src='js/prettify/min/prettify.min.js'></script>
 	<script type='text/javascript' src='js/playease.min.js'></script>
