--- a/chatease-server.html
+++ b/chatease-server.html
@@ -5,8 +5,8 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,chatease-server,rtmpmate" />
-	<meta name="description" content="" />
+	<meta name="keywords" content="chatease-server,websocket,聊天室,服务器,高并发" />
+	<meta name="description" content="This is a websocket chat server coded in C." />
 	<meta name="author" content="Tony Lau" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
