--- a/playease.html
+++ b/playease.html
@@ -5,8 +5,8 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,chatease-server,rtmpmate" />
-	<meta name="description" content="" />
+	<meta name="keywords" content="playease.js,html5 media player,html5 video player,html5播放器,跨平台,flv,fmp4,rtmp,hls" />
+	<meta name="description" content="This is a HTML5 media player for FLV live streaming." />
 	<meta name="author" content="Tony Lau" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
