--- a/slicease.html
+++ b/slicease.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,chatease-server,rtmpmate" />
+	<meta name="keywords" content="slicease.js,webgl,3d,图片轮播" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
