--- a/chatease.html
+++ b/chatease.html
@@ -5,8 +5,8 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,chatease-server,rtmpmate" />
-	<meta name="description" content="" />
+	<meta name="keywords" content="chatease.js,websocket,聊天室,ie8,ie9" />
+	<meta name="description" content="This is a client-side script for websocket chat." />
 	<meta name="author" content="Tony Lau" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
