--- a/playease.html
+++ b/playease.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="playease.js,html5 media player,html5 video player,html5播放器,跨平台,flv,fmp4,rtmp,hls" />
+	<meta name="keywords" content="playease.js,html5 media player,html5 video player,html5播放器,ie8,ie9,flv,fmp4,rtmp,hls" />
 	<meta name="description" content="This is a HTML5 media player for FLV live streaming." />
 	<meta name="author" content="Tony Lau" />
 	
