--- a/chatease.html
+++ b/chatease.html
@@ -282,18 +282,18 @@ _eventMapping = {
 		
 		users = document.getElementById('ol-users');
 		
-		var url = 'ws://118.190.79.29/001?name=游客' + (function() {
-			var id = Math.ceil(Math.random() * 1000);
-			return chatease.utils.pad(id, 3);
-		})();
-		
-		var params = window.location.search;
-		if (params) {
-			url = 'ws://118.190.79.29/001' + params;
-		}
-		
 		chat = chatease('chat').setup({
-			url: url,
+			url: (function() {
+				var url = 'ws://118.190.79.29/001';
+				var params = window.location.search;
+				if (params) {
+					return url + params;
+				}
+				
+				var id = Math.ceil(Math.random() * 1000);
+				
+				return url + '?name=游客' + chatease.utils.pad(id, 3);
+			})(),
 			width: 640,
 			height: 400,
 			maxretries: -1,
